<resources>
    <string name="app_name">HSWatch</string>

<!--    SplashActivity-->
    <string name="BT_Unavailable">Bluetooth Indisponível!</string>
    <string name="BT_Device_Conected">Está conectado ao dispositivo: </string>
    <string name="NoBT_Toast">O HSWatch necessita de o bluetooth ligado para poder operar.</string>

    <string name="navigation_abrir">Abrir menu lateral</string>
    <string name="navigation_fechar">Fechar menu lateral</string>
<!--    Strings for setup start configuration -->
    <string name="setup_start_title">Configuração do Relógio</string>
    <string name="setup_start_content">Vais configurar o relógio à aplicação HSWatch e a partir daí serão gerenciadas todas as trocas de dados entre a aplicação e o relógio.\n\nCarregua no botão para começar!</string>
    <string name="setup_start_btn">Ligar</string>

    <string name="listarTitulo">Selecione o dispositivo</string>
    <string name="ServicoDisp">hswatch.Servico.BTDispositivo</string>
    <string name="SINAL_VERDE">sinal.verde.bt</string>
    <string name="LISTAR_FRAG">hswatch.fragment.listar</string>
    <string name="FINALIZAR_FRAG">hswatch.fragment.finalizador</string>

<!--    NoBTActivity -->
    <string name="NoBT_Title">Tem o Bluetooth desligado!</string>
    <string name="NoBT_Text">Ative o Bluetooth e depois carregue neste ecrã para começar a sua experiência com o HSWatch!</string>

<!--    MainServico -->
    <string name="ServiceBT_Title">Estás agora conectado a %s!</string>
    <string name="ServiceBT_Out_of_Range_ContextText">A tentar restabelecer conexão… Carrega aqui caso pretendas alterar/parar procura.</string>
    <string name="ServiceBT_BT_Off_Title">Bluetooth desligado</string>
    <string name="ServiceBT_BT_Off_ContextText">A conexão foi desligada, bem como o seu serviço. Pressione aqui caso queira criar uma nova conexão.</string>

    <string name="AVISO_NOT_LIST">O HSWatch necessita do acesso às notificações para o seu funcionamento e de efeitos de demonstragem.\nDeseja ativar a leitura das notificações?</string>

<!--    Strings for the finishing setup fragment -->
    <string name="setup_finishing_title">Conexão sucedida!</string>
    <string name="setup_finishing_content">Agora tem o relógio conectado com a aplicação HSWatch! Carregue no botão para começar a personalizar e definir os seus novos parâmetros.</string>
    <string name="finalizador_sub_texto">Esperemos que desfrute ao máximo da sua aplicação daqui para a frente!</string>
    <string name="setup_finishing_btn">Finalizar</string>

    <string name="NOME">Nome</string>
    <string name="MENU_CASA">Página Principal</string>
    <string name="MENU_DISPOSITIVOS">Dispositivos</string>
    <string name="menu_make_conection">Adicionar novo dispositivo</string>
    <string name="MENU_DEFINICOES">Definições</string>
    <string name="DEF_CIDADE">Cidade escolhida</string>
    <string name="DEF_APAGAR_DADOS">Repor dados</string>
    <string name="MENU_NOTIFICAOES">Notificações</string>
    <string name="NOT_TITULO">Notificações Recebidas</string>
    <string name="CHA_TITULO">Chamadas Recebidas</string>
    <string name="apagar">APAGAR</string>
    <string name="TITULO">Titulo</string>
    <string name="PACKAGE">Package</string>
    <string name="TEXTO">Texto</string>
    <string name="CATEGORY">Category</string>
    <string name="HEADER">Header</string>
    <string name="DATA">DATA</string>
    <string name="NUMERO">Numero</string>
    <string name="ESTADO">Estado</string>
    <string name="ADICIONAR">ADICIONAR</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="UNIDADES">Unidades</string>
    <string name="API_TITULO">Clima API</string>
    <string name="HORARIO">Horário</string>
    <string name="TITULO_HORAS">Definir o intervalo de tempo (em min) para mandar as horas</string>
    <string name="LOC_USE">Usar localização do telemóvel</string>
    <string name="SUM_OFF">É usada a localização atual do telemóvel.</string>
    <string name="DUMMY_TEXT">Dummy Text</string>
    <string name="ServiceBT_Text">Carrega para alterar ou afetar outra conexão nova.</string>
    <string name="ERROR_DISCOVERY">Houve um erro enquanto se cancelava a descoberta de novos dispositivos. Por favor, manda-nos feedback para o contacto no Sobre!</string>
    <string name="ERROR_SERVICE">Um erro fez parar o mainServico: %s</string>
    <string name="ServiceBT_BT_Error_Title">Erro na conexão.</string>
    <string name="ServiceBT_BT_Error_ContextText">Ocorreu um erro na conexão! </string>
    <string name="ServiceBT_BT_Error_Reconection">A aplicação está a tentar reconectar-se…</string>
    <string name="Foreground_Reconection_Title">A tentar reconectar a %s</string>
    <string name="Foreground_Reconection_Text">Carregue para parar reconexão</string>
    <string name="About_Text">Developed by: Filipe Varela | Pedro Direita @ Hackerschool</string>
    <string name="Connection_Title">Conexão</string>
    <string name="Switch_Connection_Title">Manter conexão</string>
    <string name="RECEIVED">recebida</string>
    <string name="LOST">perdida</string>
    <string name="BT_DEVICE_NOT_FOUND">Não foi encontrado nenhum dispositivo</string>
    <string name="ServiceBT_Service_Off_Title">Serviço desligado</string>

<!--    Strings for the app's start Setup -->
    <string name="setup_app_image_description">Imagem Representativa</string>
    <string name="setup_start_app_title">Bem vindo ao HSWatch!</string>
    <string name="setup_start_app_content">Este é o começo do uso do HSWatch! Um smartwatch/aplicação desenvolvidos por Pedro Direita e Filipe Varela no núcleo HackerSchool do IST!\n\nVamos começar agora o setup da aplicação, por isso, carrega no botão quando quiseres</string>
    <string name="setup_start_app_image_description">Icone da app</string>
    <string name="setup_start_app_btn">AVANÇAR!</string>

    <!--    Strings for the connection functionality -->
    <string name="setup_func_app_image_description">Segunda imagem de configuração</string>
    <string name="setup_func_app_title">Conexão</string>
    <string name="setup_func_app_content">Depois deste setup, vais criar a primeira conexão com o smartwatch! Com a mesma conseguirás usar o smartwatch como de costume e sem grande esforços.\n\nCaso queiras parar a conexão, podes ir às <b>Definições</b> e carregar em <i>Manter conexão</i>.</string>

    <!--    Strings for the pairing functionality -->
    <string name="setup_pair_app_image_description">Terceira imagem do configuração</string>
    <string name="setup_pair_app_title">Emparelhamento</string>
    <string name="setup_pair_app_content">Primeiro passo será ligar o smartwatch e de seguida emparelhar o mesmo com o telemóvel como se fosse um outro dispositivo.\n\nO nome que deverá aparecer deve ser <i>HSWatch</i>.</string>
    <string name="setup_pair_app_btn">FEITO!</string>

    <!--    Strings for the baground service setup -->
    <string name="setup_background_service_app_title">Atividade em 2º Plano</string>
    <string name="setup_background_service_app_content">Com o relógio emparelhado, falta só mais um passo antes de se conectar a 100%! Dada a restrições do Android, é preciso dês a permissão de atividade em 2º plano nas definições da aplicação, sob a categoria da bateria ou algo semelhante.\n\nA aplicação tentará usar, por enquanto e em futuras atualizações, o minimo de recursos necessários para o seu bom funcionamento.</string>
    <string name="setup_background_service_app_image_description">Terceira imagem da configuração</string>

    <!--    Strings for the finished setup-->
    <string name="setup_finished_app_image_description">Última imagem da configuração</string>
    <string name="setup_finished_app_title">Setup da aplicação feita!</string>
    <string name="setup_finished_app_content">E já está! Tens a configuração da aplicação feita! Agora basta carregares no botão para mais 3 passos que terás de efetuar quando quiseres fazer uma nova conexão com o relógio.\n\nEsperemos que gostes e tenhas uma boa experiência! Podes sempre voltar a este setup a partir do menu lateral da página principal!</string>
    <string name="setup_finished_app_btn">PASSAR PARA A CONEXÃO!</string>
    <string name="setup_func_app_btn">CONTINUAR!</string>
    <string name="menu_initial_setup">Setup inicial</string>
    <string name="menu_debug">Debugging</string>
    <string name="debugging_warning">Falta %d clicks para ativar o modo depurador</string>
    <string name="debugging_mode_activated">Modo depurador ativado.</string>
    <string name="debugging_off_warning">Falta %d clicks para desativar o modo depurador</string>
    <string name="debugging_mode_deactivated">Modo depurador desativado</string>
    <string name="debugging_category">Depuração</string>
    <string name="debugging_mode_title">Modo de depuração</string>
    <string name="notifications_received_item">Notificações Recebidas</string>
    <string name="calls_received_item">Chamadas Recebidas</string>
    <string name="conecteded">Conectado</string>
</resources>
