<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/casa"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/MENU_CASA"/>

<!--    Setup Section -->
    <item android:id="@+id/novo"
        android:icon="@drawable/ic_novo"
        android:title="@string/menu_make_conection" />
    <item android:id="@+id/setup"
        android:icon="@drawable/ic_completely_new"
        android:title="@string/menu_initial_setup" />

<!--    Settings Section -->
    <item android:id="@+id/def"
        android:icon="@drawable/ic_definicoes"
        android:title="@string/MENU_DEFINICOES"/>

<!--    Debug Section -->
    <item android:id="@+id/apagar"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/DEF_APAGAR_DADOS" />
    <item android:id="@+id/notif"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/MENU_NOTIFICAOES"/>

<!--    TODO(In case if someone wants to advance on a device database -->
<!--    <item android:id="@+id/disp"-->
<!--        android:icon="@drawable/ic_dispositivo"-->
<!--        android:title="@string/MENU_DISPOSITIVOS"/>-->


</menu>