<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="24dp">

    <TextView
        android:id="@+id/apresentadorTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="78dp"
        android:text="@string/setup_start_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apresentadorTitulo"
        android:layout_gravity="center"
        android:text="@string/setup_start_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:paddingTop="90dp"
        android:textColor="#ffffffff"/>

    <Button
        android:id="@+id/apresentadorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/setup_start_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:background="@drawable/estilo_butao" />


</RelativeLayout>