<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotActivity"
    android:background="@color/HS_Circ_5">

    <ScrollView
        android:id="@+id/not_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/not_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/HS_Circ_1"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <Button
                android:id="@+id/not_btn_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Export"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_below="@id/not_toolbar"
                android:layout_margin="12dp"
                />

            <Button
                android:id="@+id/not_btn_apagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/not_btn_export"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/apagar"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/not_btn_dummy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DUMMY_TEXT"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_below="@id/not_btn_apagar"
                android:layout_margin="12dp"/>

            <EditText
                android:id="@+id/not_edit_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NOME"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_procurar"
                android:drawableTint="@android:color/black"
                android:layout_below="@+id/not_btn_dummy"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:autofillHints="@string/NOME"
                android:inputType="text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/not_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/not_disp"
                android:layout_below="@+id/not_edit_search"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/not_btn_adicionar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADICIONAR"
                android:textSize="18sp"
                android:layout_margin="12dp"
                android:layout_below="@+id/not_recycler"/>

        </RelativeLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/not_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:src="@drawable/ic_back_to_top"
        app:layout_anchor="@id/not_scroll_view"
        app:layout_anchorGravity="bottom|right|end"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>